test/TestSuite/Syntax/Correct/Currencyformat.tjp
project prj "Project" "1.0" 2007-01-01 - 2007-03-01 {
  # German currency format: e. g.  -10.000,20 5.014,11
  numberformat "-" "" "." "," 2

  # US currency format: e. g. (10,000.20) 5,014.11
  currencyformat "(" ")" "," "." 2
}

task t "Task" {
  start 2007-01-01
  milestone
}
